Add linux and windows makefiles

--- a/src/Makefile.windows
+++ b/src/Makefile.windows
@@ -1,7 +1,7 @@
-cxxflags = -g -Wall -Wextra -std=c++11 -I /usr/include/freetype2 -I/home/afiefh/src/sfml_compiled/include
-linkflags = -lsfml-graphics -lsfml-window -lsfml-system -lfreetype -lharfbuzz -lGL -lGLEW -L/home/afiefh/src/sfml_compiled/lib
+cxxflags = -g -Wall -Wextra -std=c++11 -I /usr/include/freetype2 -I/home/afiefh/src/sfml_compiled/include -I/usr/include -I/usr/local/include -I/usr/local/include/freetype2
+linkflags = -lsfml-graphics -lsfml-window -lsfml-system -lsfml-audio -lfreetype -lharfbuzz -lopengl32 -lglew32 -ljsoncpp -L/usr/lib -L/usr/local/lib  -L/home/afiefh/src/sfml_compiled/lib
 
-nightletters: main.o Font.o ComplexText.o wind.o
+nightletters: main.o Font.o ComplexText.o wind.o GLCheck.o
 	g++ ${cxxflags} main.o Font.o ComplexText.o GLCheck.o wind.o ${linkflags} -o nightletters
 
 main.o: main.cpp bezier.hpp Font.hpp ComplexText.hpp Breeze.hpp wind.hpp
