Fix windows-linux compilation

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,5 @@
 cxxflags = -g -Wall -Wextra -std=c++11 -I /usr/include/freetype2 -I/home/afiefh/src/sfml_compiled/include
-linkflags = -lsfml-graphics -lsfml-window -lsfml-system -lfreetype -lharfbuzz -lGL -lGLEW -L/home/afiefh/src/sfml_compiled/lib
+linkflags = -lsfml-graphics -lsfml-audio -lsfml-window -lsfml-system -lfreetype -lharfbuzz -ljsoncpp -lGL -lGLEW -L/home/afiefh/src/sfml_compiled/lib
 
 nightletters: main.o Font.o ComplexText.o wind.o
 	g++ ${cxxflags} main.o Font.o ComplexText.o GLCheck.o wind.o ${linkflags} -o nightletters
