Basic lightning forks

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,10 +1,10 @@
 cxxflags = -g -Wall -Wextra -std=c++11 -I /usr/include/freetype2 -I/home/afiefh/src/sfml_compiled/include
 linkflags = -lsfml-graphics -lsfml-audio -lsfml-window -lsfml-system -lfreetype -lharfbuzz -ljsoncpp -lGL -lGLEW -L/home/afiefh/src/sfml_compiled/lib
 
-nightletters: main.o Font.o ComplexText.o wind.o
+nightletters: main.o Font.o ComplexText.o wind.o lightning.o
 	g++ ${cxxflags} main.o Font.o ComplexText.o GLCheck.o wind.o ${linkflags} -o nightletters
 
-main.o: main.cpp bezier.hpp Font.hpp ComplexText.hpp Breeze.hpp wind.hpp
+main.o: main.cpp bezier.hpp Font.hpp ComplexText.hpp Breeze.hpp wind.hpp lightning.hpp
 	g++ -c ${cxxflags} main.cpp -o main.o
 
 Font.o: Font.cpp Font.hpp
@@ -18,6 +18,9 @@ ComplexText.o: ComplexText.cpp ComplexText.hpp
 
 wind.o: wind.cpp wind.hpp bezier.hpp
 	g++ -c ${cxxflags}  wind.cpp -o wind.o
+	
+lightning.o: lightning.cpp lightning.hpp
+	g++ -c ${cxxflags}  lightning.cpp -o lightning.o
 	
 run: nightletters
 	LD_LIBRARY_PATH=/home/afiefh/src/sfml_compiled/lib ./nightletters
