--- a/src/Makefile.windows
+++ b/src/Makefile.windows
@@ -2,7 +2,7 @@ cxxflags = -g -Wall -Wextra -std=c++11 -I /usr/include/freetype2 -I/home/afiefh/
 linkflags = -lsfml-graphics -lsfml-window -lsfml-system -lsfml-audio -lfreetype -lharfbuzz -lopengl32 -lglew32 -ljsoncpp -L/usr/lib -L/usr/local/lib  -L/home/afiefh/src/sfml_compiled/lib
 
 nightletters: main.o Font.o ComplexText.o wind.o lightning.o
-	g++ ${cxxflags} main.o Font.o ComplexText.o GLCheck.o wind.o ${linkflags} -o nightletters
+	g++ ${cxxflags} main.o Font.o ComplexText.o GLCheck.o wind.o lightning.o ${linkflags} -o nightletters
 
 main.o: main.cpp bezier.hpp Font.hpp ComplexText.hpp Breeze.hpp wind.hpp lightning.hpp
 	g++ -c ${cxxflags} main.cpp -o main.o
