Basic action list working

--- a/src/Makefile.windows
+++ b/src/Makefile.windows
@@ -4,7 +4,7 @@ linkflags = -lsfml-graphics -lsfml-window -lsfml-system -lsfml-audio -lfreetype 
 nightletters: main.o Font.o ComplexText.o wind.o lightning.o
 	g++ ${cxxflags} main.o Font.o ComplexText.o GLCheck.o wind.o lightning.o ${linkflags} -o nightletters
 
-main.o: main.cpp bezier.hpp Font.hpp ComplexText.hpp Breeze.hpp wind.hpp lightning.hpp
+main.o: main.cpp bezier.hpp Font.hpp ComplexText.hpp Breeze.hpp wind.hpp lightning.hpp Actions.hpp
 	g++ -c ${cxxflags} main.cpp -o main.o
 
 Font.o: Font.cpp Font.hpp
