Fix things up to work with newest sfml version

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,8 +2,8 @@ ifeq ($(OS),Windows_NT)
 	cxxflags = -g -Wall -Wextra -std=c++11 -I /usr/include/freetype2 -I/home/afiefh/src/SFML-2.2/include -I/usr/include -I/usr/local/include -I/usr/local/include/freetype2
 	linkflags = -L/home/afiefh/src/SFML-2.2/lib -L/home/afiefh/src/SFML-2.2/bin -lsfml-graphics -lsfml-window -lsfml-system -lsfml-audio -lfreetype -lharfbuzz -lopengl32 -lglew32 -ljsoncpp -L/usr/lib -L/usr/local/lib  -L/home/afiefh/src/SFML-2.2/lib
 else
-	cxxflags = -g -Wall -Wextra -std=c++11 -I /usr/include/freetype2 -I/home/afiefh/src/sfml_compiled/include
-	linkflags = -lsfml-graphics -lsfml-audio -lsfml-window -lsfml-system -lfreetype -lharfbuzz -ljsoncpp -lGL -lGLEW -L/home/afiefh/src/sfml_compiled/lib
+	cxxflags = -g -Wall -Wextra -std=c++11 -I /usr/include/freetype2 #-I/home/afiefh/src/sfml_compiled/include
+	linkflags = -lsfml-graphics -lsfml-audio -lsfml-window -lsfml-system -lfreetype -lharfbuzz -ljsoncpp -lGL -lGLEW #-L/home/afiefh/src/sfml_compiled/lib
 endif
 
 
